--- a/Fifth_demo/Patient_Edit_View.ui
+++ b/Fifth_demo/Patient_Edit_View.ui
@@ -73,7 +73,18 @@
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QComboBox" name="comboBox_Gender"/>
+      <widget class="QComboBox" name="comboBox_Gender">
+       <item>
+        <property name="text">
+         <string>男</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>女</string>
+        </property>
+       </item>
+      </widget>
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="label_5">
@@ -93,7 +104,11 @@
       </widget>
      </item>
      <item row="5" column="1">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_Height"/>
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_Height">
+       <property name="maximum">
+        <double>299.990000000000009</double>
+       </property>
+      </widget>
      </item>
      <item row="6" column="0">
       <widget class="QLabel" name="label_7">
@@ -103,7 +118,11 @@
       </widget>
      </item>
      <item row="6" column="1">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_Width"/>
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_Width">
+       <property name="maximum">
+        <double>299.990000000000009</double>
+       </property>
+      </widget>
      </item>
      <item row="7" column="0">
       <widget class="QLabel" name="label_8">
@@ -114,6 +133,16 @@
      </item>
      <item row="7" column="1">
       <widget class="QLineEdit" name="lineEdit_Phone"/>
+     </item>
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>创建时间：</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="QLineEdit" name="lineEdit_CreateTime"/>
      </item>
     </layout>
    </item>
